Fixed pokemon overlapping with bottom section

--- a/main.css
+++ b/main.css
@@ -446,31 +446,33 @@ header {
   #pokedex-list li {
     width: calc(100% / 5 - 40px);
     height: 250px;
-    background-repeat: no-repeat;
-    background-size: contain;
     background-color: #eee;
     margin: 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
-    #pokedex-list li .pokemon-number {
-      margin: 0;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(0, 0, 0, 0.1);
-      border-bottom-right-radius: 10px; }
-    #pokedex-list li .wrapper {
+    #pokedex-list li .top {
+      height: 100%;
+      background-repeat: no-repeat;
+      background-size: contain; }
+      #pokedex-list li .top .pokemon-number {
+        margin: 0;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.1);
+        border-bottom-right-radius: 10px; }
+    #pokedex-list li .bottom {
       display: flex;
       justify-content: flex-end;
       align-items: center;
       position: relative;
       background: rgba(0, 0, 0, 0.1);
       height: 40px; }
-      #pokedex-list li .wrapper .like-btn {
+      #pokedex-list li .bottom .like-btn {
         color: #DC0A2D;
         background: none;
         display: flex;
@@ -479,7 +481,7 @@ header {
         padding: 0;
         box-sizing: border-box;
         justify-content: center; }
-      #pokedex-list li .wrapper .pokemon-name {
+      #pokedex-list li .bottom .pokemon-name {
         position: absolute;
         left: 50%;
         top: 50%;
